[gd_scene load_steps=3 format=3 uid="uid://kykj1hoc7ipq"]

[ext_resource type="Script" uid="uid://u1wtf343lnp5" path="res://skript/team_lobby_multiplayer.gd" id="1_fa8ae"]
[ext_resource type="PackedScene" uid="uid://bpt877p03hs32" path="res://szene/player_slot.tscn" id="1_xwvpy"]

[node name="TeamLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fa8ae")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Training"

[node name="TeamsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 596.0
offset_bottom = 283.0

[node name="Team1Container" type="VBoxContainer" parent="TeamsContainer"]
layout_mode = 2

[node name="PlayerSlot1" parent="TeamsContainer/Team1Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot2" parent="TeamsContainer/Team1Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot3" parent="TeamsContainer/Team1Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot4" parent="TeamsContainer/Team1Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot5" parent="TeamsContainer/Team1Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot6" parent="TeamsContainer/Team1Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="Team2Container" type="VBoxContainer" parent="TeamsContainer"]
layout_mode = 2

[node name="PlayerSlot7" parent="TeamsContainer/Team2Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot8" parent="TeamsContainer/Team2Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot9" parent="TeamsContainer/Team2Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot10" parent="TeamsContainer/Team2Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot11" parent="TeamsContainer/Team2Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="PlayerSlot12" parent="TeamsContainer/Team2Container" instance=ExtResource("1_xwvpy")]
layout_mode = 2

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 96.0
offset_bottom = 331.0
disabled = true
text = "Start"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 300.0
offset_right = 362.0
offset_bottom = 331.0
text = "Zur√ºck"

[node name="ErrorLabel" type="AcceptDialog" parent="."]

[node name="CountdownTimer" type="Timer" parent="."]

[node name="CountdownLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Team1Label" type="Label" parent="."]
layout_mode = 2
offset_left = 108.0
offset_right = 165.0
offset_bottom = 23.0
text = "Team 1"

[node name="Team2Label" type="Label" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 3.0
offset_right = 593.0
offset_bottom = 26.0
text = "Team 2"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
